module/core/derive_tools/tests/inc/phantom/compiletime/enum.stderr
error: expected `struct`
 --> tests/inc/phantom/compiletime/enum.rs:4:1
  |
4 | enum Enum< T >
  | ^^^^
