module/core/derive_tools/tests/inc/phantom/compiletime/enum.rs
use derive_tools::phantom;

#[ phantom ]
enum Enum< T >
{
  A,
  B,
  C( T ),
}

fn main()
{
}